final after validation

--- a/glossary.html
+++ b/glossary.html
@@ -1,17 +1,21 @@
 	<!DOCTYPE html>
-	<html>
+	<html lang="en">
 	<head>
 		<title>glossary</title>
+		<link rel="stylesheet" type="text/css" href="glossary.css"><!-- this is the link for the glossary.html with glossary.css-->
+		<meta charset="utf-8">
 	</head>
-	<link rel="stylesheet" type="text/css" href="glossary.css"><!-- this is the link for the glossary.html with glossary.css-->
-	<h1>
+	
+	
+		<body>
+			<h1>
 		ISAAC NEWS THE BELIEVE OF NATION
-		<div class="image"><!-- the image of the logo given in a class-->
-			<img src="horse1.png">
-		</div>
+		<b class="image"><!-- the image of the logo given in a class-->
+			<img src="horse1.png" alt="hello">
+		</b>
 
-		<div class="search"><!--the input text box for search display-->
-			<input type="text" name=""></div>
+		<b class="search"><!--the input text box for search display-->
+			<input type="text" name="search"></b>
 
 
 		</h1>
@@ -32,12 +36,6 @@
 			</ul>
 			
 	</div>
-
-
-
-
-		
-		<body>
 			<h2><!--header representation-->
 				Web development Terms
 			</h2>
@@ -45,9 +43,9 @@
 				Flex property
 			</h3>
 			<div class="fir">
-				<img src="flex1.jpg">
-				<img src="flex2.jpg">
-				<img src="flex3.jpg">
+				<img src="flex1.jpg" alt="hello">
+				<img src="flex2.jpg" alt="hello">
+				<img src="flex3.jpg" alt="hello">
 			</div>
 			<p><!--contains discriptions -->
 				the flex property is very essential for web development term as it 
@@ -59,8 +57,8 @@
 				Transitions
 			</h4>
 			<div class="sec"><!--contains images -->
-				<img src="transition.png">
-				<img src="transition1.png">
+				<img src="transition.png" alt="hello">
+				<img src="transition1.png" alt="hello">
 
 			</div>
 			<p><!--contains discriptions -->
@@ -68,9 +66,10 @@
 				where the property enables to change from one to another state.this allow a
 				web page to be more attractive.
 			</p>
-
-		</body>
-		<footer>
+			<footer>
 			ISaac<!-- this footer only contain that is black colour background just for the a little bar show-->
 		</footer>
+
+		</body>
+		
 		</html>
