--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
+
+<head>
 <link rel="stylesheet" type="text/css" href="style.css"><!-- this is the link for the index html with style css-->
 <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"><!--this is the link for the social media icon for this page linked with font awesome.com-->
-<head>
+
 	<title>
 		NEWS
 	</title>
+	<meta charset="utf-8">
+	</head>
+	
+
+<body>
 	<h1>
 		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
-		<div class="image">
-			<img src="horse1.png"><!-- the image of the logo given in a class--> 
-		</div>
+		<b class= "image">
+			<img src= "horse1.png" alt="hello"><!-- the image of the logo given in a class--> 
+		</b>
 		
-		<div class="search"><!--the input text box for search display-->
-			<input type="text" name=""></div>
+		<b class= "search"><!--the input text box for search display-->
+			<input type= "text" name="search"></b>
 
 	</h1>
-</head>
-<body> 
 	<div class="first"><!-- this div represent the unorder list for the navigation bar--> 
 			<ul>
 			<li><a href="#">Home</a>
@@ -41,16 +46,18 @@
 	<div class="sec"><!--this div sec represent the embeed videos of youtube -->
 		
 		<p>
-			<iframe  width="494"= height="315" src="https://www.youtube.com/embed/oa-udwGUkp8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>></iframe>
+			<iframe  width="494" height="315" src="https://www.youtube.com/embed/oa-udwGUkp8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</p>
 		<nav>
-			<iframe width="494" height="315" src="https://www.youtube.com/embed/fMRSCq1LvaY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="494" height="315" src="https://www.youtube.com/embed/fMRSCq1LvaY"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</nav>
-		<section>
-			
-		<iframe width="494" height="315" src="https://www.youtube.com/embed/AkEDk6zw_Sw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
+		<p>
+			<iframe  width="494" height= "315" src="https://www.youtube.com/embed/AkEDk6zw_Sw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
 
-		</section>
+		</p>
+			
+		
+		
 	</div>
 
 	<h3> <!-- this is another heading represents sports-->
@@ -60,18 +67,19 @@
 	<div class="third"><!-- this class third represent the embeed video of youtube-->
 		
 		<p>
-			<iframe width="494" height="315" src="https://www.youtube.com/embed/UkL9l2FWIls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="494" height="315" src="https://www.youtube.com/embed/UkL9l2FWIls" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</p>
 		<nav>
-			<iframe width="494" height="315" src="https://www.youtube.com/embed/j0T42bSuOeA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="494" height="315" src="https://www.youtube.com/embed/j0T42bSuOeA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</nav>
-		<section>
-			<iframe width="494" height="315" src="https://www.youtube.com/embed/3Cjxfu1AcQA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</section>
+		<p>
+			
+		
+			<iframe width="494" height="315" src="https://www.youtube.com/embed/3Cjxfu1AcQA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</p>
 
 	</div>
-</body>
-<footer>
+
 	<div class="last"><!--thiis class of div represent the information for advertisement-->
 		<h4>
 			ADVERTISEMENT
@@ -84,7 +92,8 @@
 
 	<div class="media"><!-- the class media have a link for the social medias icons-->  
 		
-		<section>
+		<p>
+
 			<a class="link" href ="facebook.html">
 			<i class="fab fa-facebook"></i>
 		</a>
@@ -97,15 +106,18 @@
 			<a  class="link"  href="twitter.html">
 			<i class="fab fa-twitter"></i>
 		</a>
-
-		</section>
+		</p>
+		
 		
 			
 
 		
 	</div>
-		
-</footer>
+</body>
+
+
+
+
 		
 
 </html>
