--- a/jobs.html
+++ b/jobs.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>jobs</title>
 	<link rel="stylesheet" type="text/css" href="jobs.css"><!-- this is the link for the jobs.html with jobs.css-->
+	<meta charset="utf-8">
+</head>	
+
+<body>
+
 	<h1>
 		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
-		<div class="image">
-			<img src="horse1.png"><!-- the image of the logo given in a class--> 
-		</div>
+		<b class="image">
+			<img src="horse1.png" alt="hello"><!-- the image of the logo given in a class--> 
+		</b>
 		
-		<div class="search">
-			<input type="text" name=""><!--the input text box for search display-->
-
+		<b class="search">
+			<input type="text" name="search"><!--the input text box for search display-->
+		</b>
 </h1>
 	<div class="first"><!-- this div represent the unorder list for the navigation bar--> 
 			<ul>
@@ -30,14 +35,17 @@
 			</ul>
 			
 	</div>
-</head>
+
 
 <h2>
 	Job Comparision
 </h2>
-<body>
-<div class="container"><!--this class container have the both the div that contain jobs comparisions-->
-<div class="fir"><!-- this fir class represent the wrrten element of jobs-->
+
+
+
+
+	<div class="container"><!--this class container have the both the div that contain jobs comparisions-->
+	<div class="fir"><!-- this fir class represent the wrrten element of jobs-->
 	<h3><!-- h3 conatins the discription --><!-- h4 conatins the discription -->
 		online reporter
 	
@@ -45,9 +53,9 @@
 		of collection of different images, videos, audio, text etc.
 		the online reporting. this has a impoetant role for web development. 
 	</h3>
-	
-</div>
-<div class="sec"><!-- this sec class represent the wrrten element of jobs-->
+		
+	</div>
+	<div class="sec"><!-- this sec class represent the wrrten element of jobs-->
 	<h4><!-- h4 conatins the discription -->
 		web page designer
 
@@ -76,8 +84,8 @@
 		last name:<br>
 		<input type="text" name="lastname"><br><br>
 		Gender:<br>
-		male:
-		<input type="radio" name="gender" value="male" checked="male"><br>	
+		 <label>male:
+		<input type="radio" name="gender" value="male" checked="male"><br></label>	
 		female:
 		<input type="radio" name="gender" value="female" checked="female"><br>
 		other:
@@ -89,9 +97,10 @@
 	
 		</form>
 </div>
-
-</body>
 <footer><!-- this footer only contain that is black colour background just for the a little bar show-->
 	ISAAC ISAAC
 </footer>
+
+</body>
+
 </html>
