--- a/reviews.html
+++ b/reviews.html
@@ -1,16 +1,17 @@
 	<!DOCTYPE html>
-	<html>
+	<html lang="en">
 	<head>
 		<title>reviews</title>
+		<link rel="stylesheet" type="text/css" href="reviews.css">
 	</head>
-	<link rel="stylesheet" type="text/css" href="reviews.css"><!-- this is the link for the reviews.html with reviews.css-->
+	<!-- this is the link for the reviews.html with reviews.css-->
 		<h1>
 			ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
-			<div class="image">
+			<b class="image">
 				<img src="horse1.png"><!-- the image of the logo given in a class-->
-			</div>
-			<div class="search">
-				<input type="text" name=""><!--the input text box for search display-->
+			</b>
+			<b class="search">
+				<input type="text" name="search"> </b><!--the input text box for search display-->
 
 
 		</h1>
@@ -32,7 +33,7 @@
 				</ul>
 				
 		</div>
-		<h2>
+		
 
 		<h2><!-- header representation-->
 			Reviews of ISAAC News
@@ -56,9 +57,9 @@
 	</div>
 
 		
-
-	</body>
-	<footer>
+		<footer>
 		ISAAC ISAAC<!-- this footer only contain that is black colour background just for the a little bar show-->
 	</footer>
+	</body>
+
 	</html>
