--- a/team.html
+++ b/team.html
@@ -1,18 +1,24 @@
 	<!DOCTYPE html>
-	<html>
+	<html lang="en">
 	<head>
 		<title>team</title>
+		<link rel="stylesheet" type="text/css" href="team.css"><!-- this is the link for the team. html with team.css-->
+		<meta charset="utf-8">
 	</head>
-	<link rel="stylesheet" type="text/css" href="team.css"><!-- this is the link for the team. html with team.css-->
-	<h1>
+	
+	
+		<body>
+
+
+			<h1>
 		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
-		<div class="image">
-			<img src="horse1.png"><!-- the image of the logo given in a class--> 
-		</div>
+		<b class="image">
+			<img src="horse1.png" alt="hello"><!-- the image of the logo given in a class--> 
+		</b>
 
-		<div class="search">
-			<input type="text" name=""><!--the input text box for search display-->
-
+		<b class="search">
+			<input type="text" name="search"><!--the input text box for search display-->
+		</b>	
 		</h1>
 		<div class="first"><!-- this div represent the unorder list for the navigation bar-->
 			<ul>
@@ -31,34 +37,35 @@
 			</ul>
 
 		</div>
-		<body>
 			<h2><!--header representation-->
 				Team Of ISAAC News
 			</h2>
 			<div class="fir"><!--the class fir contiain image and discription-->
-				<img src="user3.png">
+				<img src="user3.png" alt="hello">
 				Mr.raut excecutive of alpha news
 
 			</div>
 			<div class="sec"><!--the class sec contiain image and discription-->
-				<img src="user3.png">
+				<img src="user3.png" alt="hello">
 				Miss.Dahal managing director of alpha news.
 			</div>
 			<div class="third"><!--the class third contiain image and discription-->
-				<img src="user3.png">
+				<img src="user3.png" alt="hello">
 				Miss pandey web designer of alpha news.
 			</div>
 			<div class="last"><!--the class last contiain image and discription-->
-				<img src="user3.png">
+				<img src="user3.png" alt="hello">
 				Mr pandit online reporter of alpha news.
 			</div>
 			<div class="fifth"><!--the class fifth contiain image and discription-->
-				<img src="user3.png">
+				<img src="user3.png" alt="hello">
 				Mr bhattrai. Online text editor of alpha news.
 			</div>
 
-		</body>
-		<footer><!-- this footer only contain that is black colour background just for the a little bar show-->
+			<footer><!-- this footer only contain that is black colour background just for the a little bar show-->
 			isaac isaac
 		</footer>
+
+		</body>
+		
 		</html>
