--- a/tutorials.html
+++ b/tutorials.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>
 		Tutorials
 	</title>
+	<link rel="stylesheet" type="text/css" href="tutorials.css">
+	<meta charset="utf-8">
 </head>
-<link rel="stylesheet" type="text/css" href="tutorials.css"><!-- this is the link for the tutorails.html with tutorials.css-->
-	<h1>
-		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
-		<div class="image">
-			<img src="horse1.png">
-		</div>
-		
-		<div class="search"><!--the input text box for search display-->
-			<input type="text" name="">
+<!-- this is the link for the tutorails.html with tutorials.css-->
 
+<body>
+
+<h1>
+		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
+		<b> 
+			<img src="horse1.png" alt="hello">
+		
+		</b>
+		<b class="search"><!--the input text box for search display-->
+			<input type="text" name="search">
+		</b>	
 	</h1>
 
 		<div class="first"><!-- this div represent the unorder list for the navigation bar-->
@@ -43,14 +48,15 @@
 
 		Learn HTML
 	</h3>
-<body>
+
+
 <div class="fir"><!--this div fir represent the embeed videos of youtube -->
-	<iframe width="495" height="315" src="https://www.youtube.com/embed/bWPMSSsVdPk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="495" height="315" src="https://www.youtube.com/embed/bWPMSSsVdPk"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<nav>
-		<iframe width="495" height="315" src="https://www.youtube.com/embed/hMxGhHNOkCU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="495" height="315" src="https://www.youtube.com/embed/hMxGhHNOkCU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</nav>	
 	<p>
-		<iframe width="495" height="315" src="https://www.youtube.com/embed/3JluqTojuME" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="495" height="315" src="https://www.youtube.com/embed/3JluqTojuME" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</p>
 
 </div>
@@ -59,18 +65,19 @@
 	Learn CSS
 </h4>
 <div class="second"><!--this div second represent the embeed videos of youtube -->
-	<iframe width="495" height="315" src="https://www.youtube.com/embed/0afZj1G0BIE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="495" height="315" src="https://www.youtube.com/embed/0afZj1G0BIE"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	<nav>
-		<iframe width="495" height="315" src="https://www.youtube.com/embed/8x1mO1d6-4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="495" height="315" src="https://www.youtube.com/embed/8x1mO1d6-4w"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</nav>
 	<p>
-		<iframe width="495" height="315" src="https://www.youtube.com/embed/qKoajPPWpmo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="495" height="315" src="https://www.youtube.com/embed/qKoajPPWpmo" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</p>
 
 </div>
-</body>
 <footer>
 	ISAAC ISAAc<!-- this footer only contain that is displayed black colour background just for the a little bar show-->
 </footer>
+</body>
+
 </html>
